// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reboot component should render correctly 1`] = `
<span
  className="ins-c-reboot"
>
  <RebootingIcon />
  <span>
    Reboot required
  </span>
</span>
`;

exports[`Reboot component should render correctly with red 1`] = `
<span
  className="ins-c-reboot ins-m-red"
>
  <RebootingIcon />
  <span>
    Reboot required
  </span>
</span>
`;
